Node dirver bug in Material and Texture #39018

Closed
opened 2014-03-07 08:20:04 +01:00 by Danyang Yi · 12 comments

System Information
win7 64 bit sp1
amd card hd7700

Blender Version
Broken: 2.69.0 r60995 and 2.70 hash:571f184
Worked: not sure

Short description of error
Node dirver bug in Material[BI and Cycles] and Texture. But working with Compositing node.
The screenshot would be helpful.
node_driver_compositing[right]_material[bad]_texture[bad].jpg

Exact steps for others to reproduce the error
Set the same value driver.
Node Compositing [right]
Node Material (BI Cycles) [bad result]
Node Texture [bad result]

The blend file:
node_driver_compositing[right]_material[bad]_texture[bad].blend

Thanks for you hard work!
Best wishes!

**System Information** win7 64 bit sp1 amd card hd7700 **Blender Version** Broken: 2.69.0 r60995 *and* 2.70 hash:571f184 Worked: not sure **Short description of error** Node dirver bug in Material[BI and Cycles] and Texture. But working with Compositing node. The screenshot would be helpful. ![node_driver_compositing[right]_material[bad]_texture[bad].jpg](https://archive.blender.org/developer/F80171/node_driver_compositing_right__material_bad__texture_bad_.jpg) **Exact steps for others to reproduce the error** Set the same value driver. Node Compositing [right] Node Material (BI Cycles) [bad result] Node Texture [bad result] The blend file: [node_driver_compositing[right]_material[bad]_texture[bad].blend](https://archive.blender.org/developer/F80174/node_driver_compositing_right__material_bad__texture_bad_.blend) Thanks for you hard work! Best wishes!
Author

Changed status to: 'Open'

Changed status to: 'Open'
Lukas Tönne was assigned by Danyang Yi 2014-03-07 08:20:04 +01:00
Author

Added subscriber: @yang2018

Added subscriber: @yang2018
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

What do you expect when you use fully typed-out paths in the expressions (i.e. things like "bpy.data.<...blah blah blah>.<property_name_at_last>")?!

  • There's no way for Blender to know that there are dependencies between properties when you do this
  • Be aware too that not all datablocks (notably textures and a few others) cannot be updated correctly due to dependency graph limitations. In those cases, drivers must live on the corresponding objects/materials or else they will not work correctly
What do you expect when you use fully typed-out paths in the expressions (i.e. things like "bpy.data.<...blah blah blah>.<property_name_at_last>")?! - There's no way for Blender to know that there are dependencies between properties when you do this - Be aware too that not all datablocks (notably textures and a few others) cannot be updated correctly due to dependency graph limitations. In those cases, drivers must live on the corresponding objects/materials or else they will not work correctly
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Lukas Tönne removed their assignment 2014-03-08 08:56:53 +01:00
Joshua Leung was assigned by Lukas Tönne 2014-03-08 08:56:53 +01:00
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Like aligorith said: Drivers in nodes are severely limited by the current depgraph. Another issue is that the graph editor relies a lot on context, which makes it difficult for some datablock drivers to be displayed correctly.

@JoshuaLeung: Not sure about the duplicate shader driver listing. Looks like this is caused by duplicate loop for materials here:
https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/animation/anim_filter.c$1767

Assigned to you for deciding.

Like aligorith said: Drivers in nodes are severely limited by the current depgraph. Another issue is that the graph editor relies a lot on context, which makes it difficult for some datablock drivers to be displayed correctly. @JoshuaLeung: Not sure about the duplicate shader driver listing. Looks like this is caused by duplicate loop for materials here: https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/animation/anim_filter.c$1767 Assigned to you for deciding.

This issue was referenced by blender/blender-addons-contrib@d219312d44

This issue was referenced by blender/blender-addons-contrib@d219312d44d7153dfe74eeef1dd0f8cbbc1340f3

This issue was referenced by d219312d44

This issue was referenced by d219312d44d7153dfe74eeef1dd0f8cbbc1340f3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit d219312d44.

Closed by commit d219312d44.
Author

Hi! @JoshuaLeung @LukasTonne

I've been replaced "fully typed-out paths" into "sin(frame)" still don't working. especially in Texture node.
Hope we can remove this limited someday.

Thanks for you reply. Thanks for your great work!

Hi! @JoshuaLeung @LukasTonne I've been replaced "fully typed-out paths" into "sin(frame)" still don't working. especially in Texture node. Hope we can remove this limited someday. Thanks for you reply. Thanks for your great work!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39018
No description provided.